more ll skel